# rust-tauri-vote-app

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: rust.yml
src/: App.css  App.jsx  countdownTimer.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  websocket.rs
